from src.rendering.seeing_object import SeeingObject


class Enemy(SeeingObject):
    pass